--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Pathfinding</title>
-        <meta name="description" content="Pathfinding visualizer on a real map.">
-        <meta name="keywords" content="pathfinding, visualizer, visualization, map pathfinding, a star visualizer, dijkstra visualizer, a star map visualizer">
-        <meta name="robots" content="all, follow">
-        <meta name="author" content="petemihaylov">
-        <!-- Favicon -->
-        <link rel="icon" href="./favicon.ico">
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="./src/page.jsx"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pathfinding</title>
+    <meta name="description" content="Pathfinding visualizer on a real map." />
+    <meta
+      name="keywords"
+      content="pathfinding, visualizer, visualization, map pathfinding, a star visualizer, dijkstra visualizer, a star map visualizer"
+    />
+    <meta name="robots" content="all, follow" />
+    <meta name="author" content="petemihaylov" />
+    <!-- Favicon -->
+    <link rel="icon" href="./favicon.ico" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="./src/page.jsx"></script>
+  </body>
 </html>
